src/main/java/com/example/harumeonglog/global/error/code/PostErrorCode.java
package com.example.harumeonglog.global.error.code;

import lombok.AllArgsConstructor;
import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
@AllArgsConstructor
public enum PostErrorCode implements BaseErrorCode {
    NOT_FOUND(HttpStatus.NOT_FOUND, "POST404", "게시물을 찾지 못했습니다."),
    ;

    private final HttpStatus httpStatus;
    private final String code;
    private final String message;
}
